# sphot

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.py
docs/: conf.py  index.rst  requirements.txt  toc.rst
docs/_build/doctrees/: environment.pickle  index.doctree  notebooks.doctree
docs/_build/doctrees/api/: core.doctree  (+1 more)
docs/_build/html/: .buildinfo  genindex.html  index.html  installation.html  notebooks.html  objects.inv  py-modindex.html  search.html  searchindex.js  toc.html  tutorials copy.html  tutorials.html
docs/_static/: custom.css
docs/api/: aperture.rst  calibrate_psf.rst  config.rst  core.rst  data.rst  fitting.rst  logging.rst  parallel.rst  plotting.rst  psf.rst  run_sphot.rst  utils.rst
docs/rst/: algorithm.rst  config.rst  tutorials.rst
sample_data/: F090W_PSF_0.03as_Oversample4x.npy  F150W_PSF_0.03as_Oversample4x.npy  F160W_PSF_0.03as_Oversample4x.npy  F277W_PSF_0.03as_Oversample4x.npy  F555W_PSF_0.03as_Oversample4x.npy  F814W_PSF_0.03as_Oversample4x.npy  g004.h5  g095.h5  g095_ABmags.npy  g096.h5  g144.h5  g163.h5  g198.h5  g200.h5  g205.h5  g211.h5  g225.h5  g226.h5  g232.h5  g232_ABmags.npy  g260.h5  g260_ABmags.npy  g272.h5  g273.h5  g277.h5  g281.h5  g281_ABmags.npy  g310.h5  g310_ABmags.npy  g321.h5  g321_ABmags.npy  g327.h5  g366.h5
sphot/: __init__.py  aperture.py  calibrate_psf.py  config.py  core.py  data.py  default_config.toml  fitting.py  logging.py  parallel.py  plotting.py  psf.py  resources.py  run_sphot.py  utils.py
tests/: g260_ABmags.npy  psf_diagnostics.py  sphot_config.toml  test.py  test_old.py
(+65 files in other folders)
